<resources>
    <string name="app_name">CFT test</string>
    <string name="password">Password</string>
    <string name="authored_by">Authored by Mikhailenko Roman</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date">Date</string>
    <string name="birthday">BirthDay</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="hello">hello</string>
</resources>