<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_app"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fontFamily="@font/baumans"
        android:theme="@android:style/Theme.Black.NoTitleBar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-176dp"
        tools:layout_editor_absoluteY="-107dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:textSize="19sp">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/circle_angle"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textColorHint="@color/font_color_hint"
                android:textSize="19sp" />


            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/circle_angle"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textColorHint="@color/font_color_hint"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/circle_angle"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/birthday"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textColorHint="@color/font_color_hint"
                android:textSize="19sp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/circle_angle"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textColorHint="@color/font_color_hint"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/circle_angle"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textColorHint="@color/font_color_hint"
                android:textSize="19sp" />


        </LinearLayout>

        <Button
            android:id="@+id/btmConfirm"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="500dp"
            android:text="@string/confirm" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="700dp"
            android:text="@string/authored_by"
            android:textColor="@color/author" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>